# drone_client

./: CMakeLists.txt  common_stuff.h  common_utils.h  config_reader.cpp  config_reader.h  control_signal_receiver.cpp  control_signal_receiver.h  drone_client.cpp  drone_client.h  drone_client.pro  drone_controller.cpp  drone_controller.h  drone_imitator.cpp  drone_imitator.h  image_from_drone.cpp  image_from_drone.h  image_from_file.cpp  image_from_file.h  main.cpp  objrepr_bus_drone.cpp  objrepr_bus_drone.h  video_convertor.cpp  video_convertor.h  video_generator.cpp  video_generator.h
from_ms_common/common/: ms_common_utils.h
from_ms_common/system/: logger_astra.cpp  logger_astra.h  logger_normal.cpp  logger_normal.h  objrepr_bus.cpp  objrepr_bus.h
scripts/: build_by_cmake.sh  run.sh
